feat: added music

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Main css -->
     <link rel="stylesheet" href="css/style.css" />
     <audio controls autoplay style="margin-top: 2%">
-      <source src="../music.mp3" type="audio/mp3" />
+      <source src="./music.mp3" type="audio/mp3" />
     </audio>
   </head>
   <body>
